Initial work on AP generated lambdas and replace lmbda with reflection